header and footer and nav tag is added

--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
         <picture>
             <textarea name="" id="" cols="30" rows="10"></textarea>
         </picture>
+
+        <nav>this is ajay</nav>
 </html>
